# app

./: .gitignore  CLAUDE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-linux.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/schemas/s.how.see.data.local.db.SEEDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_file_fallback.xml  ic_logo.xml  (+6 more)
android/gradle/: libs.versions.toml
linux/: Cargo.toml  README.md
linux/packaging/: PKGBUILD  PKGBUILD-bin
linux/packaging/deb/: postinst
linux/packaging/flatpak/: ee.s.app.yml
linux/packaging/rpm/: post_install.sh
linux/src/: application.rs
macos/: README.md
macos/Assets.xcassets/AppIcon iOS.appiconset/: Contents.json
macos/Assets.xcassets/AppIcon macOS.appiconset/: Contents.json
macos/Assets.xcassets/AppIcon-Display.imageset/: Contents.json
macos/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
macos/SEE/: SEE.entitlements  SEEApp.swift
macos/SEE.xcodeproj/: project.pbxproj
macos/SEE.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos/SEE/Models/: APIModels.swift  ShortLink.swift  TextShare.swift  UploadedFile.swift
macos/SEE/Services/: APIClient.swift  KeychainService.swift  ThumbnailService.swift
macos/SEE/Utilities/: Constants.swift  Extensions.swift  ImageConverter.swift  LinkFormatter.swift
macos/SEE/ViewModels/: FileUploadViewModel.swift  ShortLinkViewModel.swift  TagsViewModel.swift  TextShareViewModel.swift  UsageViewModel.swift
macos/SEE/Views/: ContentView.swift
macos/SEE/Views/Components/: CachedThumbnailView.swift  CopyButton.swift  DomainPicker.swift  EmptyStateView.swift  LinkRowView.swift  LoadingOverlay.swift  PaginationView.swift  TagSelector.swift
macos/SEE/Views/Files/: FileUploadView.swift  UploadedFileListView.swift
macos/SEE/Views/Settings/: SettingsView.swift
macos/SEE/Views/ShortLinks/: CreateShortLinkView.swift  LinkStatsView.swift  ShortLinkDetailView.swift  ShortLinkListView.swift
macos/SEE/Views/Tags/: TagsView.swift
macos/SEE/Views/TextSharing/: CreateTextShareView.swift  TextShareDetailView.swift  TextShareListView.swift
macos/SEE/Views/Usage/: UsageView.swift
macos/SEEMac/: MenuBarView.swift
macos/seeicon.icon/: icon.json
(+69 files in other folders)
