[package]
name = "see"
version = "0.1.0"
edition = "2024"
description = "A native GNOME desktop client for S.EE URL shortening service"
authors = ["S.EE Team"]
license = "MIT"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
see-sdk = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-channel = "2.3"
glib = "0.20"
gio = "0.20"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = "0.25"
cairo-rs = { version = "0.20", features = ["pdf"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
glib-build-tools = "0.20"

[package.metadata.deb]
maintainer = "S.EE Team <support@s.ee>"
copyright = "2024-2026, S.EE Team"
license-file = ["../LICENSE", "0"]
extended-description = """A native GNOME desktop client for S.EE - URL shortening, text sharing, and file hosting service.
Features include URL shortening, text sharing, file uploads, QR code generation, and local history tracking."""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/see", "usr/bin/", "755"],
    ["data/ee.s.app.desktop", "usr/share/applications/", "644"],
    ["data/ee.s.app.metainfo.xml", "usr/share/metainfo/", "644"],
    ["data/icons/hicolor/scalable/apps/ee.s.app.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/ee.s.app.gschema.xml", "usr/share/glib-2.0/schemas/", "644"],
]
postinst-script = "packaging/deb/postinst"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/see", dest = "/usr/bin/see", mode = "755" },
    { source = "data/ee.s.app.desktop", dest = "/usr/share/applications/ee.s.app.desktop", mode = "644" },
    { source = "data/ee.s.app.metainfo.xml", dest = "/usr/share/metainfo/ee.s.app.metainfo.xml", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/ee.s.app.svg", dest = "/usr/share/icons/hicolor/scalable/apps/ee.s.app.svg", mode = "644" },
    { source = "data/ee.s.app.gschema.xml", dest = "/usr/share/glib-2.0/schemas/ee.s.app.gschema.xml", mode = "644" },
]
post_install_script = "packaging/rpm/post_install.sh"

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14"
libadwaita = ">= 1.5"
